show test cases table in editor