@@ -1,29 +1,32 @@
 package com.example.demo;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class DB {
     public static List<Project> loadProjects() {
-        return List.of(
-                new Project("Project A", List.of(
-                        new Feature(1, "Login"),
-                        new Feature(2, "Logout")
-                ))
+        List<TestCase> loginTests = Arrays.asList(
+                new TestCase("Login with valid credentials", "Dashboard shown", "Enter username and password", "High"),
+                new TestCase("Login with invalid password", "Error message displayed", "Enter wrong password", "Medium")
         );
-    }
 
-    public static List<TestCase> loadTestCases(int featureId) {
-        return List.of(
-                new TestCase(1, "Valid Login", "User is logged in", "Enter credentials → Click Login", "High"),
-                new TestCase(2, "Invalid Login", "Error message shown", "Enter wrong password → Click Login", "Medium")
+        List<TestCase> logoutTests = Arrays.asList(
+                new TestCase("Logout from profile page", "Redirected to login", "Click logout", "Low")
         );
+
+        Feature loginFeature = new Feature("Login", loginTests);
+        Feature logoutFeature = new Feature("Logout", logoutTests);
+
+        Project project = new Project("Project A", Arrays.asList(loginFeature, logoutFeature));
+
+        return new ArrayList<>(List.of(project));
     }
 
     public static List<TestCaseHistory> loadTestCaseHistory(int testCaseId) {
-        return List.of(
-                new TestCaseHistory("2025-03-28 10:30", "Priority updated to High"),
-                new TestCaseHistory("2025-03-26 08:15", "Step 2 added"),
-                new TestCaseHistory("2025-03-20 15:00", "Test case created")
-        );
+        List<TestCaseHistory> history = new ArrayList<>();
+        history.add(new TestCaseHistory("2024-03-01", "Created test case"));
+        history.add(new TestCaseHistory("2024-03-15", "Updated expected result"));
+        return history;
     }
 }
